{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 21,
  "lineage": "cb30f03e-7bd6-654d-5de3-2d5b1303567f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085980924b8e6e0f1",
            "arn": "arn:aws:ec2:us-east-2:793323451186:elastic-ip/eipalloc-085980924b8e6e0f1",
            "domain": "vpc",
            "id": "eipalloc-085980924b8e6e0f1",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-146-126-9.us-east-2.compute.amazonaws.com",
            "public_ip": "3.146.126.9",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-nat-eip",
              "Project": "aldeia"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-nat-eip",
              "Project": "aldeia"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:internet-gateway/igw-0989f69f514cfceb8",
            "id": "igw-0989f69f514cfceb8",
            "owner_id": "793323451186",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-igw",
              "Project": "aldeia"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-igw",
              "Project": "aldeia"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085980924b8e6e0f1",
            "association_id": "eipassoc-0fcd84ee55a51c0cf",
            "connectivity_type": "public",
            "id": "nat-05b8e6ce0e0a07716",
            "network_interface_id": "eni-0c2958840e68e7774",
            "private_ip": "10.0.1.4",
            "public_ip": "3.146.126.9",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a2d3bd2cbca6941",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-nat",
              "Project": "aldeia"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-nat",
              "Project": "aldeia"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public_az1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084cb81309cc85fe11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05b8e6ce0e0a07716",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-084cb81309cc85fe1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-084cb81309cc85fe1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public_az1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0989f69f514cfceb8",
            "id": "r-rtb-0c49c659774c9d7031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-0c49c659774c9d703",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-0c49c659774c9d703"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:route-table/rtb-084cb81309cc85fe1",
            "id": "rtb-084cb81309cc85fe1",
            "owner_id": "793323451186",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-rtb-private",
              "Project": "aldeia"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-rtb-private",
              "Project": "aldeia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "rtb-084cb81309cc85fe1",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:route-table/rtb-0c49c659774c9d703",
            "id": "rtb-0c49c659774c9d703",
            "owner_id": "793323451186",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-rtb-public",
              "Project": "aldeia"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-rtb-public",
              "Project": "aldeia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "rtb-0c49c659774c9d703",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb1c35669637070b",
            "region": "us-east-2",
            "route_table_id": "rtb-084cb81309cc85fe1",
            "subnet_id": "subnet-027e926911434db63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.app_az1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f5b41f2289d0597",
            "region": "us-east-2",
            "route_table_id": "rtb-084cb81309cc85fe1",
            "subnet_id": "subnet-0f1978ddc302dc103"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.app_az2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0067e2c5fb932649e",
            "region": "us-east-2",
            "route_table_id": "rtb-084cb81309cc85fe1",
            "subnet_id": "subnet-0276c47b3851a8dcf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.db_az1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e35de9ef1415cc93",
            "region": "us-east-2",
            "route_table_id": "rtb-084cb81309cc85fe1",
            "subnet_id": "subnet-0dc7ca9535a77d35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.db_az2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260c03008f98f2eb",
            "region": "us-east-2",
            "route_table_id": "rtb-0c49c659774c9d703",
            "subnet_id": "subnet-01a2d3bd2cbca6941"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_az1",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c60cd34cac7c6caf",
            "region": "us-east-2",
            "route_table_id": "rtb-0c49c659774c9d703",
            "subnet_id": "subnet-01932ee2b2f503124"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_az2",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:subnet/subnet-027e926911434db63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027e926911434db63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793323451186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "Layer": "app",
              "ManagedBy": "terraform",
              "Name": "private-app-a",
              "Project": "aldeia",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "staging",
              "Layer": "app",
              "ManagedBy": "terraform",
              "Name": "private-app-a",
              "Project": "aldeia",
              "Tier": "private"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "subnet-027e926911434db63",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:subnet/subnet-0f1978ddc302dc103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1978ddc302dc103",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793323451186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "Layer": "app",
              "ManagedBy": "terraform",
              "Name": "private-app-b",
              "Project": "aldeia",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "staging",
              "Layer": "app",
              "ManagedBy": "terraform",
              "Name": "private-app-b",
              "Project": "aldeia",
              "Tier": "private"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "subnet-0f1978ddc302dc103",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:subnet/subnet-0276c47b3851a8dcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0276c47b3851a8dcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793323451186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "Layer": "db",
              "ManagedBy": "terraform",
              "Name": "private-db-a",
              "Project": "aldeia",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "staging",
              "Layer": "db",
              "ManagedBy": "terraform",
              "Name": "private-db-a",
              "Project": "aldeia",
              "Tier": "private"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "subnet-0276c47b3851a8dcf",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:subnet/subnet-0dc7ca9535a77d35c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc7ca9535a77d35c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793323451186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "Layer": "db",
              "ManagedBy": "terraform",
              "Name": "private-db-b",
              "Project": "aldeia",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "staging",
              "Layer": "db",
              "ManagedBy": "terraform",
              "Name": "private-db-b",
              "Project": "aldeia",
              "Tier": "private"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "subnet-0dc7ca9535a77d35c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:subnet/subnet-01a2d3bd2cbca6941",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a2d3bd2cbca6941",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "793323451186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "public-a",
              "Project": "aldeia",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "public-a",
              "Project": "aldeia",
              "Tier": "public"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "subnet-01a2d3bd2cbca6941",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:subnet/subnet-01932ee2b2f503124",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01932ee2b2f503124",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "793323451186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "public-b",
              "Project": "aldeia",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "public-b",
              "Project": "aldeia",
              "Tier": "public"
            },
            "vpc_id": "vpc-0116c750405ebb8b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "subnet-01932ee2b2f503124",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:793323451186:vpc/vpc-0116c750405ebb8b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022054737b48661bd",
            "default_route_table_id": "rtb-002fb016121d03e1f",
            "default_security_group_id": "sg-05d20517b917cbe90",
            "dhcp_options_id": "dopt-087a820d179aa56d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0116c750405ebb8b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002fb016121d03e1f",
            "owner_id": "793323451186",
            "region": "us-east-2",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-vpc",
              "Project": "aldeia"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "aldeia-staging-vpc",
              "Project": "aldeia"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "793323451186",
            "id": "vpc-0116c750405ebb8b2",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}